# rabbitmq

./: .flake8  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json  setup.sh
rabbitmq/: config.py  consumer.py  producer.py  py.typed
