[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = "rabbitmq notes"
authors = ["José Nunes <josenunesra@gmail.com>"]
repository = "https://github.com/josejnra/rabbitmq"
homepage = "https://github.com/josejnra/rabbitmq"
documentation = "https://github.com/josejnra/rabbitmq"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.7"
types-paramiko = {version = "^3.0.0.8", optional = true}
types-python-dateutil = {version = "^2.8.19.12", optional = true}
types-pytz = {version = "^2023.3.0.0", optional = true}
types-pyyaml = {version = "^6.0.12.9", optional = true}
types-requests = {version = "^2.28.11.17", optional = true}
types-six = {version = "^1.16.21.8", optional = true}
pika = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
Faker = "^18.6.0"
flake8 = "^6.1.0"

[tool.poetry.extras]
dev_types = ["types-paramiko", "types-python-dateutil", "types-pytz", "types-PyYAML", "types-requests", "types-six"]

[tool.black]
line-length = 120
# target-version = ['py310']  # all versions that your code supports
# extend-exclude = "rabbitmq"  # adds additional files and directories on top of the excluded one

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true  # Includes a trailing comma on multi line imports that include parentheses
line_length = 88  # max length of an import line
# extend_skip = []  # add additional files that isort should skip over
# skip_glob = ["rabbitmq/*"]  # nested files that isort should skip over.

[tool.mypy]
exclude = []  # regular expressions
cache_dir = "/tmp/.mypy_cache"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
